Changes in 0.61.5:
  * Added basic clone capability (which only works cloning to parents
    branches and shadows, and on a single host).
  * Now handles degenerate case of packaging unreadable files.
  * A bug that caused conary to ask for the wrong fileId when constructing
    a changeset from multiple repositores has been fixed.

Changes in 0.61.4:
  * %(datadir)s/.../lib/ files will no longer show up in :lib - presumption
    being that anything under %(datadir)s really is arch independenct
  * Creating branches and shadows had a command line parsing bug
  * "cvc newpkg" takes --dir and now complains for unexpected arguments
    (which is used to just ignore)
  * when using flavor affinity for installed troves, merge subarchitecture 
    flags
  * group handling didn't always preserve troves which were needed by a
    newly installed trove properly

Changes in 0.61.3:
  * Corrected a bug that snuck in 0.61.2 that caused a temporary SQL table
    to not be temporary, which makes multiple httpd processes fail with
    'database schema changed' errors.

Changes in 0.61.2:
  * Fix a bunch of typos in the authentication checking server side
  * Add permission editing capabilities to the server component and hooks
    in the netclient
  * Overhaul of ACL system so that uniqueness constraints on Troves and 
    Labels can be enforced: we now use a special Trove and Label "0 | ALL"
    instead of Null
  * Dependency resolution enforces label ACLs.
  * Module arguments to commitaction are parsed according to shell
    quoting rules.
  * The changemail commitaction module now takes an optional '--from'
    argument.
  * added clearBuildReqs() - will clear all or some of superclass buildreqs
    when cooking.
  * The pickled version of Dependency objects changed, therefore the
    schema version of the changeset cache has been incremented.
  * When Configure() detects a failure and input or output is not a